manifests/03-redis-follower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-follower
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-follower
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-follower
    spec:
      containers:
      - name: follower-redis
        image: gcr.io/google_samples/gb-redisslave:v3
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-follower
  namespace: production
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: redis-follower
